src/test/resources/validation/error/queryReturningInterfaceIllegalArguments/schema.graphqls
type Film implements Node @table {
  id: ID!
  title: String!
}

type Query {
  nodes(id: ID!, title: String): Node
}
